--- a/_includes/sidebar-nav-links.html
+++ b/_includes/sidebar-nav-links.html
@@ -1,7 +1,7 @@
 <nav id="sidebar-nav-links">
   {% if site.sidebar_home_link %}
     <a class="home-link {% if page.url == '/' %} active{% endif %}"
-        href="{{ "/" | relative_url }}">Home</a>
+        href="{{ "/" | relative_url }}">Aktuell</a>
   {% endif %}
   {% if site.sidebar_blog_link %}
     <a class="page-link {% if page.url == site.sidebar_blog_link %} active{% endif %}"
@@ -14,6 +14,7 @@
   {% endcomment %}
 
   {% include page-links.html %}
+
   {% include category-links.html %}
 
   {% include custom-nav-links.html %}
