--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -37,7 +37,7 @@ body {
   padding: $section-spacing;
 
   .site-title {
-    font-family: 'Georgia', 'Times New Roman', 'Times', serif;;
+    font-family: 'Georgia', 'Times New Roman', 'Times', serif;
     font-size: $large-font-size;
     font-weight: normal;
     margin-bottom: $heading-spacing;
