--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -38,7 +38,7 @@ body {
 
   .site-title {
     font-family: 'Georgia', 'Times New Roman', 'Times', serif;
-    font-size: $large-font-size;
+    font-size: 42px;
     font-weight: normal;
     margin-bottom: $heading-spacing;
     margin-top: 0;
