--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -18,9 +18,7 @@
       {% endfor %}
 
       {% if category_page %}
-        <a href="{{ category_page.url | relative_url }}">
-          {{ category_page.title | default: category_page.category }}
-        </a>
+        <a href="{{ category_page.url | relative_url }}">{{ category_page.title | default: category_page.category }}</a>
       {% else %}
         {{ category }}
       {% endif %}
