--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,18 +16,18 @@
   
   <script>
     function showDropdown(id) {
-      document.getElementById(id).classList.toggle("show");
+      document.getElementById(id).classList.toggle('dropdown-visible');
     }
 
-    // close dropdown menu if the user clicks outside of it
+    // close dropdown menu if user clicks outside of it
     window.onclick = function(event) {
-      if (!event.target.matches('.dropbtn')) {
-        var dropdowns = document.getElementsByClassName("dropdown-content");
+      if (!event.target.matches('.dropdown-button')) {
+        var dropdowns = document.getElementsByClassName('dropdown-content');
         var i;
         for (i = 0; i < dropdowns.length; i++) {
           var openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains('show')) {
-            openDropdown.classList.remove('show');
+          if (openDropdown.classList.contains('dropdown-visible')) {
+            openDropdown.classList.remove('dropdown-visible');
           }
         }
       }
