--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -270,6 +270,7 @@ body {
 #sidebar .site-title {
   color: $sidebar-title-color;
   a { color: inherit; }
+  a:hover { text-decoration: none; }
 }
 
 #sidebar nav {
