--- a/_includes/pagination-newer.html
+++ b/_includes/pagination-newer.html
@@ -2,7 +2,7 @@
 <div class="pagination">
   <a class="pagination-item newer"
      href="{{ paginator.previous_page_path | relative_url }}">
-    Newer
+    Neuere Beiträge
   </a>
 </div>
 {% endif %}
