get formatted date from included module

--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -1,10 +1,4 @@
-{% capture i18n_date %}
-{% assign day = page.date | date: "%-d" %}
-{% assign m = page.date | date: "%-m" | minus: 1 %}
-{% assign month = site.months[m] %}
-{% assign year = page.date | date: "%Y" %}
-{% assign formattedDate = day | append: ". " | append: month | append: " " | append: year %}
-{% endcapture %}
+{% include formatted-date.html date=include.post.date %}
 
 <div class="post-meta">
   <!-- <span class="post-date">{{ include.post.date | date_to_string }}</span> -->
