fix source date variable

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-{% include formatted-date.html date=include.post.date %}
+{% include formatted-date.html date=post.date %}
 
 {% unless page.content == '' %}
   {{ content }}
