--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,7 +13,7 @@ layout: page
     <li>
       <h3>
         <a href="{{ post.url | relative_url }}">
-          {{ post.title }}
+          {{ post.title | smartify }}
           <!-- <small>{{ post.date | date_to_string }}</small> -->
           <small>{{ formattedDate }}</small>
         </a>
