--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,7 @@ layout: default
   <article class="post-body">
     <h2 class="post-title">
       <a href="{{ post.url | relative_url }}">
-        {{ post.title }}
+        {{ post.title | smartify }}
       </a>
     </h2>
     {% include post-meta.html post=post %}
