--- a/_includes/tags-list.html
+++ b/_includes/tags-list.html
@@ -28,7 +28,7 @@
           <li>
             <h3>
               <a href="{{ post.url | relative_url }}">
-                {{ post.title }}
+                {{ post.title | smartify }}
                 <small>{{ post.date | date_to_string }}</small>
               </a>
             </h3>
