--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,3 @@
 <p>
-  &copy; {{ site.time | date: '%Y' }}.
-  <a href="{{ "/site-notice/" | relative_url }}">Impressum.</a>
+  &copy; {{ site.time | date: '%Y' }}
 </p>
