--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,7 +17,7 @@ layout: default
     {% include post-meta.html post=post %}
 
     {% if post.excerpt %}
-      {{ post.excerpt }}
+      {{ post.excerpt | truncatewords: 180, ' …' }}
     {% else %}
       {{ post.content | truncatewords: 180, ' …' }}
     {% endif %}
