--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,13 +17,24 @@ layout: default
     {% include post-meta.html post=post %}
 
     {% if post.excerpt %}
-    <p>
-      {{ post.excerpt | markdownify | strip_html | truncatewords: 180, ' …' }}
-    </p>
+      {% comment %}Check if excerpt equals content.{% endcomment %}
+      {% capture content_words %}
+        {{ post.content | number_of_words }}
+      {% endcapture %}
+      {% capture excerpt_words %}
+        {{ post.excerpt | number_of_words }}
+      {% endcapture %}
+
+      {% if content_words != excerpt_words %}
+        {{ post.excerpt }}
+      {% else %}
+        {{ post.excerpt | markdownify | strip_html | truncatewords: 100, ' …' }}
+      {% endif %}
+    {% else %}
+      {{ post.content | markdownify | strip_html | truncatewords: 100, ' …' }}
     {% endif %}
 
     <a href="{{ post.url | relative_url }}">Weiterlesen &hellip;</a>
-
   </article>
   {% endfor %}
 
